Fri Feb 24 08:45:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/ACE_Compression.mpc:
        * ace/Compression/rle/ACE_RLECompression.mpc:
          Fixed id and install problems

        * bin/fuzz.pl:
          Extended check for incorrect id tags

Thu Feb 23 08:20:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/Compressor.h:
        * ace/Compression/rle/RLECompressor.h:
        * bin/MakeProjectCreator/config/ace_compressionlib.mpb:
        * bin/MakeProjectCreator/config/ace_rlecompressionlib.mpb:
          Fuzz fixes

Thu Feb 23 07:52:58 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression:
        * ace/Compression/ACE_Compression.mpc:
        * ace/Compression/ACE_Compression_export.h:
        * ace/Compression/Compressor.h:
        * ace/Compression/Compressor.inl:
        * ace/Compression/Compressor.cpp:
        * ace/Compression/rle:
        * ace/Compression/rle/ACE_RLECompression.mpc:
        * ace/Compression/rle/ACE_RLECompression_export.h:
        * ace/Compression/rle/RLECompressor.h:
        * ace/Compression/rle/RLECompressor.cpp:
        * bin/MakeProjectCreator/config/ace_compressionlib.mpb:
        * bin/MakeProjectCreator/config/ace_rlecompressionlib.mpb:
          Added new ACE compression and rle compressor libraries. This code
          was first part of TAO, but now moved to ACE because it provides
          a basic run length encoding compressor that makes it possible to
          compress data without depending on any external library

        * docs/bczar/bczar.html:
          Added package

Tue Feb 21 14:52:02 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_NS_Thread.inl:
        * ace/config-vxworks6.9.h:

          Fixed errors from fuzz script.

Tue Feb 21 14:37:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * PROBLEM-REPORT-FORM:
          Removed build method question
