@@ -10,6 +10,10 @@ ACE_RLECompressor::ACE_RLECompressor(void)
 {
 }
 
+ACE_RLECompressor::~ACE_RLECompressor(void)
+{
+}
+
 ACE_UINT64
 ACE_RLECompressor::compress( const void *in_ptr,
                              ACE_UINT64 in_len,
